--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "vite": "https://aistudiocdn.com/vite@^7.1.5",
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.3.21",
+    "stream": "https://aistudiocdn.com/stream@^0.0.3"
   }
 }
 </script>
