--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
     "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.3.21",
-    "stream": "https://aistudiocdn.com/stream@^0.0.3"
+    "stream": "https://aistudiocdn.com/stream@^0.0.3",
+    "buffer": "https://aistudiocdn.com/buffer@^6.0.3"
   }
 }
 </script>
